# SlateHub

./: .env.example  .env.production.example  .env.test-prod  .gitignore  Context.md  DOCKER_SETUP.md  LICENSE  MIGRATION_SUMMARY.md  Makefile  PRODUCTION_SETUP.md  README.md  SlateHub_Productions_Product_Specification.md  deploy-production.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  history.txt  test_schema_changes.sql  test_sse.sh  test_sse_format.sh
server/: .dockerignore  .env.test  Cargo.toml  Dockerfile  README.md  build.rs  test_db_fix.sh  test_signup.sh
server/.cargo/: config.toml
server/src/: auth.rs  config.rs  datastar.rs  db.rs  error.rs  html.rs  lib.rs  logging.rs  main.rs  markdown.rs  response.rs  serde_utils.rs  social_platforms.rs  sse.rs  stats.rs  templates.rs  text.rs  verification_limits.rs  version.rs  video_platforms.rs
server/src/aristotle/: config.rs  llm.rs  mod.rs  models.rs
server/src/mcp/: mod.rs
server/src/middleware/: activity.rs  auth.rs  error_handler.rs  logging.rs  mod.rs  request_id.rs
server/src/models/: activity.rs  analytics.rs  consent_grant.rs  equipment.rs  involvement.rs  job.rs  landing.rs  likes.rs  location.rs  media.rs  membership.rs  messaging.rs  mod.rs  notification.rs  oauth_client.rs  organization.rs  pending_invitation.rs  person.rs  production.rs  script.rs  system.rs
server/src/routes/: README.md  account.rs  admin.rs  analytics.rs  api.rs  auth.rs  developers.rs  equipment.rs  jobs.rs  landing.rs  likes.rs  locations.rs  media.rs  messages.rs  mod.rs  notifications.rs  oidc.rs  org_settings.rs  organizations.rs  pages.rs  productions.rs  productions_manage.rs  profile.rs  public_profiles.rs  search.rs  verification.rs  webhooks.rs
server/src/services/: activity.rs  aristotle_runner.rs  email.rs  embedding.rs  feature_flag.rs  geodata.rs  invitation.rs  landing.rs  listmonk.rs  mod.rs  notification_stream.rs  oidc_events.rs  oidc_keys.rs  oidc_tokens.rs  profile_completeness.rs  profile_reminders.rs  s3.rs  search.rs  search_log.rs  search_utils.rs  stripe.rs  tmdb.rs  verification.rs
server/static/: font-test.html  test-sse-minimal.html  test-sse-raw.html  test-sse.html
server/static/css/: README.md  SELECTOR_REFERENCE.md  forms-modern.css  forms.css  home-modern.css  layout.css  legal.css  main.css  modern-enhancements.css  modern-theme.css  profile.css  slatehub-pico.css  slatehub.css
server/static/js/: manage-workspace.js  organization-logo-upload.js  profile-image-upload.js
server/templates/: _layout.html  _macros.html  about.html  index.html  location.html  login.html  people.html  privacy.html  production.html  production_create.html  productions.html  profile.html  profile_edit.html  projects.html  signup.html
server/templates/about/: index.html
server/templates/account/: settings.html
server/templates/admin/: dashboard.html  feature_flags.html  feedback.html  landing_pages.html  locations.html  mailing_list.html  organizations.html  people.html  productions.html
server/templates/auth/: forgot_password.html  invite_landing.html  reset_password.html  verify_email.html  verify_success.html
server/templates/developers/: index.html  oidc.html  security_events.html
server/templates/equipment/: checkin.html  checkout.html  detail.html  form.html  kit_detail.html  kit_form.html  list.html  rental_history.html
server/templates/errors/: 401.html  403.html  404.html  500.html  generic.html
server/templates/impressum/: index.html
server/templates/jobs/: job.html  job_create.html  job_edit.html  jobs.html  my_jobs.html
server/templates/landing/: not_on_set.html
server/templates/likes/: index.html
server/templates/locations/: location.html  location_create.html  (+2 more)
server/templates_backup/: _layout.html  example_components.html  index.html  login.html  profile.html  projects.html  signup.html
server/tests/: aristotle_breakdown_integration_test.rs  aristotle_runner_test.rs  auth_session_test.rs  auth_test.rs  cascade_delete_test.rs  cleanup_unverified_test.rs  config_test.rs  datastar_test.rs  email_test.rs  embedding_test.rs  feature_flag_test.rs  html_test.rs  landing_test.rs  logging_test.rs  manage_access_test.rs  membership_test.rs  oidc_tokens_test.rs  organization_test.rs  organization_tests.rs  organization_unit_test.rs  production_lifecycle_test.rs  profile_completeness_test.rs  profile_data_test.rs  profile_reminder_test.rs  profile_tests.rs  request_id_test.rs  resume_verification_test.rs  s3_roundtrip_test.rs  schema_migrations_test.rs  script_management_test.rs  serde_utils_test.rs  session_user_test.rs  signup_ratelimit_test.rs  signup_render_test.rs  stripe_webhook_test.rs  templates_test.rs  text_test.rs  user_tests.rs  verify_email_render_test.rs  webhook_handlers_test.rs  (+1 more)
(+184 files in other folders)
