[package]
name = "slatehub"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Chris Bruce <chris@secedastudios.com>"]
license = "Apache-2.0"
default-run = "slatehub"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = "0.4"
cookie = "0.18"
dotenv = "0.15.0"
futures = "0.3"
jsonwebtoken = "9.3"
rand = "0.8"
argon2 = "0.5"
base64 = "0.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
surrealdb = "2.3.7"
tera = "1.20"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = [
    "trace",
    "cors",
    "fs",
    "compression-br",
    "compression-gzip",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
uuid = { version = "1.10", features = ["v4"] }
