[package]
name = "slatehub"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Chris Bruce <chris@secedastudios.com>"]
license = "Apache-2.0"
default-run = "slatehub"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = "0.4"
cookie = "0.18"
dotenv = "0.15.0"
futures = "0.3"
jsonwebtoken = "9.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
argon2 = "0.5"
base64 = "0.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
surrealdb = "2.3.7"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = [
    "trace",
    "cors",
    "fs",
    "compression-br",
    "compression-gzip",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
ulid = "1.1"
async-trait = "0.1.89"
aws-config = "1.1"
aws-sdk-s3 = "1.15"

image = "0.24"
bytes = "1.9"
uuid = { version = "1.10", features = ["v4"] }
urlencoding = "2.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
once_cell = "1.19"
tokio-test = "0.4"
serial_test = "3.0"
