[package]
name = "slatehub"
version = "1.2.4"
edition = "2024"
publish = false
authors = ["Chris Bruce <chris@secedastudios.com>"]
license = "Apache-2.0"
default-run = "slatehub"

[[bin]]
name = "slatehub"
path = "src/main.rs"

[[bin]]
name = "rebuild-embeddings"
path = "src/bin/rebuild_embeddings.rs"

[[bin]]
name = "oidc-rotate-key"
path = "src/bin/oidc_rotate_key.rs"

[dependencies]
async-stream = "0.3"
spow = { version = "0.6", features = ["server"] }
sysinfo = "0.35"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "form"] }
chrono = "0.4"
cookie = "0.18"
dotenv = "0.15.0"
futures = "0.3"
jsonwebtoken = "9.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
argon2 = "0.5"
base64 = "0.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
surrealdb = "3.0.5"
surrealdb-types = "3.0.5"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = [
    "trace",
    "cors",
    "fs",
    "compression-br",
    "compression-gzip",
    "set-header",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
ulid = "1.1"
async-trait = "0.1.89"
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }

image = "0.24"
bytes = "1.9"
uuid = { version = "1.10", features = ["v4"] }
urlencoding = "2.1"

# Markdown rendering + HTML sanitization
pulldown-cmark = "0.12"
ammonia = "4"

# OIDC provider: ed25519 signing + token hashing + URL parsing
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
serde_urlencoded = "0.7"
sha2 = "0.10"
url = "2"

# MCP server
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server", "tower", "macros", "schemars"] }
tokio-util = "0.7"

# Semantic search dependencies
fastembed = "4.0"
anyhow = "1.0"
regex = "1.12.3"
resvg = "0.47.0"
tiny-skia = "0.12.0"
qrcode = { version = "0.14", default-features = false }
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono-humanize = "0.2.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
once_cell = "1.19"
tokio-test = "0.4"
serial_test = "3.0"
